# routes/userRoute.js
@@ -1,7 +1,8 @@
 const router = require('express').Router();
-const { registerUser, login } = require('../controllers/userController');
+const { registerUser, login,getSearchedBlood } = require('../controllers/userController');
 
 router.post('/login', login);
 router.post('/register', registerUser);
+router.get('/search-blood', getSearchedBlood);
 
 module.exports = router;
